[package]
name = "pyth-solana-receiver-sdk"
version = "0.3.0"
description = "SDK for the Pyth Solana Receiver program"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pyth-crosschain"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "pyth_solana_receiver_sdk"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
hex = ">=0.4.3"
pythnet-sdk = { path = "../../../pythnet/pythnet_sdk", version = "2.1.0", features = ["solana-program"]}
solana-program = "2.2"
