[package]
name = "pyth-lazer-solana-contract"
version = "0.2.0"
edition = "2021"
description = "Pyth Lazer Solana contract and SDK."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_lazer_solana_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
pyth-lazer-protocol = { version = "0.1.2", path = "../../../../sdk/rust/protocol" }

anchor-lang = "0.32.1"
bytemuck = "1.4.0"
byteorder = "1.4.3"
thiserror = "1.0"
solana-program = "2.2"

[dev-dependencies]
hex = "0.4.3"
solana-program-test = "2"
solana-sdk = "2.2"
tokio = { version = "1.40.0", features = ["full"] }
